--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-example",
-  "private": true,
+  "name": "alchemy-react",
+  "private": false,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
@@ -11,22 +11,21 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
-    "@dojoengine/core": "^0.0.15",
-    "@dojoengine/create-burner": "^0.0.3",
+    "@dojoengine/core": "^0.0.16",
+    "@dojoengine/create-burner": "^0.0.13",
     "@dojoengine/react": "^0.0.3",
     "@latticexyz/recs": "^1.43.0",
     "@latticexyz/utils": "^1.43.0",
     "ethers": "^5.7.2",
-    "events": "^3.3.0",
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "mobx": "^6.9.0",
-    "phaser": "^3.60.0",
     "proxy-deep": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
-    "starknet": "^5.14.1"
+    "starknet": "^5.14.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
